--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.51.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "morgan": "^1.10.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
